ADD: TFT ILI9163C hardware setup.

--- a/openDSD.ioc
+++ b/openDSD.ioc
@@ -1,7 +1,18 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=SPI2_TX
 Dma.Request1=SPI3_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI1_TX
+Dma.RequestsNb=3
+Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.2.Instance=DMA2_Stream3
+Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.2.Mode=DMA_NORMAL
+Dma.SPI1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI2_TX.0.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.SPI2_TX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
@@ -71,6 +82,7 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FATFS
+Mcu.IP10=SYS
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2S2
 Mcu.IP4=I2S3
@@ -78,39 +90,43 @@ Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=RTC
 Mcu.IP8=SDIO
-Mcu.IP9=SYS
-Mcu.IPNb=10
+Mcu.IP9=SPI1
+Mcu.IPNb=11
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA7
-Mcu.Pin11=PB10
-Mcu.Pin12=PB12
-Mcu.Pin13=PC7
-Mcu.Pin14=PC8
-Mcu.Pin15=PC9
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PC10
-Mcu.Pin19=PC11
+Mcu.Pin10=PA3
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PB10
+Mcu.Pin16=PB12
+Mcu.Pin17=PC7
+Mcu.Pin18=PC8
+Mcu.Pin19=PC9
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PC12
-Mcu.Pin21=PD2
-Mcu.Pin22=PB3
-Mcu.Pin23=PB5
-Mcu.Pin24=VP_FATFS_VS_SDIO
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_SYS_VS_tim6
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PC10
+Mcu.Pin23=PC11
+Mcu.Pin24=PC12
+Mcu.Pin25=PD2
+Mcu.Pin26=PB3
+Mcu.Pin27=PB5
+Mcu.Pin28=VP_FATFS_VS_SDIO
+Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PC3
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA6
-Mcu.PinsNb=28
+Mcu.Pin30=VP_RTC_VS_RTC_Activate
+Mcu.Pin31=VP_SYS_VS_tim6
+Mcu.Pin4=PC0
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -119,6 +135,7 @@ MxDb.Version=DB.5.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -156,15 +173,19 @@ PA4.GPIOParameters=GPIO_Speed
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Mode=Half_Duplex_Master
 PA4.Signal=I2S3_WS
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=TFT_SCK
+PA5.Mode=Simplex_Bidirectional_Master
+PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=PinState,GPIO_Label
 PA6.GPIO_Label=LED_D2
 PA6.Locked=true
 PA6.PinState=GPIO_PIN_RESET
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=LED_D3
-PA7.Locked=true
-PA7.Signal=GPIO_Output
+PA7.GPIO_Label=TFT_SDA
+PA7.Mode=Simplex_Bidirectional_Master
+PA7.Signal=SPI1_MOSI
 PB10.GPIOParameters=GPIO_Speed
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB10.Mode=Half_Duplex_Master
@@ -181,6 +202,14 @@ PB5.GPIOParameters=GPIO_Speed
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Mode=Half_Duplex_Master
 PB5.Signal=I2S3_SD
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=TFT_A0
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=TFT_RESET
+PC1.Locked=true
+PC1.Signal=GPIO_Output
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
 PC11.Mode=SD_4_bits_Wide_bus
@@ -191,6 +220,10 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=TFT_CS
+PC2.Locked=true
+PC2.Signal=GPIO_Output
 PC3.GPIOParameters=GPIO_Speed
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC3.Mode=Half_Duplex_Master
@@ -282,6 +315,12 @@ RCC.VCOI2SOutputFreq_Value=320000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=45714285.71428572
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CalculateBaudRate=2.625 MBits/s
+SPI1.Direction=SPI_DIRECTION_1LINE
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
@@ -291,3 +330,4 @@ VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=custom
+isbadioc=false
