--- a/openDSD.ioc
+++ b/openDSD.ioc
@@ -69,7 +69,7 @@ Dma.SPI3_TX.1.Priority=DMA_PRIORITY_HIGH
 Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 FATFS.BSP.number=1
 FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_MAX_SS
-FATFS.USE_DMA_CODE_SD=1
+FATFS.USE_DMA_CODE_SD=0
 FATFS._MAX_SS=4096
 FATFS._USE_LFN=2
 FATFS0.BSP.STBoard=false
@@ -143,7 +143,7 @@ Mcu.Pin27=PB5
 Mcu.Pin28=VP_FATFS_VS_SDIO
 Mcu.Pin29=VP_RTC_VS_RTC_Activate
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=VP_SYS_VS_tim6
+Mcu.Pin30=VP_SYS_VS_Systick
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
@@ -171,10 +171,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TimeBase=TIM6_DAC_IRQn
-NVIC.TimeBaseIP=TIM6
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=BTN_DOWN
@@ -353,7 +350,7 @@ VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_SYS_VS_tim6.Mode=TIM6
-VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
 isbadioc=false
