initial player and flipflop data stream class.

--- a/openDSD.ioc
+++ b/openDSD.ioc
@@ -46,11 +46,11 @@ Dma.SPI2_TX.0.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.SPI2_TX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 Dma.SPI2_TX.0.Instance=DMA1_Stream4
 Dma.SPI2_TX.0.MemBurst=DMA_MBURST_SINGLE
-Dma.SPI2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.SPI2_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_TX.0.Mode=DMA_NORMAL
+Dma.SPI2_TX.0.Mode=DMA_CIRCULAR
 Dma.SPI2_TX.0.PeriphBurst=DMA_PBURST_SINGLE
-Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.0.Priority=DMA_PRIORITY_HIGH
 Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
@@ -59,11 +59,11 @@ Dma.SPI3_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.SPI3_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 Dma.SPI3_TX.1.Instance=DMA1_Stream5
 Dma.SPI3_TX.1.MemBurst=DMA_MBURST_SINGLE
-Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_TX.1.Mode=DMA_NORMAL
+Dma.SPI3_TX.1.Mode=DMA_CIRCULAR
 Dma.SPI3_TX.1.PeriphBurst=DMA_PBURST_SINGLE
-Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_TX.1.Priority=DMA_PRIORITY_HIGH
 Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
