--- a/openDSD.ioc
+++ b/openDSD.ioc
@@ -1,76 +1,77 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SPI2_TX
-Dma.Request1=SPI3_TX
-Dma.Request2=SPI1_TX
-Dma.Request3=SDIO_RX
-Dma.Request4=SDIO_TX
+Dma.Request0=SPI1_TX
+Dma.Request1=SDIO_RX
+Dma.Request2=SDIO_TX
+Dma.Request3=SPI3_TX
+Dma.Request4=SPI2_TX
 Dma.RequestsNb=5
-Dma.SDIO_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SDIO_RX.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDIO_RX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDIO_RX.3.Instance=DMA2_Stream3
-Dma.SDIO_RX.3.MemBurst=DMA_MBURST_INC4
-Dma.SDIO_RX.3.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDIO_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.SDIO_RX.3.Mode=DMA_PFCTRL
-Dma.SDIO_RX.3.PeriphBurst=DMA_PBURST_INC4
-Dma.SDIO_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDIO_RX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SDIO_RX.3.Priority=DMA_PRIORITY_LOW
-Dma.SDIO_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.SDIO_TX.4.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SDIO_TX.4.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDIO_TX.4.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDIO_TX.4.Instance=DMA2_Stream6
-Dma.SDIO_TX.4.MemBurst=DMA_MBURST_INC4
-Dma.SDIO_TX.4.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDIO_TX.4.MemInc=DMA_MINC_ENABLE
-Dma.SDIO_TX.4.Mode=DMA_PFCTRL
-Dma.SDIO_TX.4.PeriphBurst=DMA_PBURST_INC4
-Dma.SDIO_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDIO_TX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.SDIO_TX.4.Priority=DMA_PRIORITY_LOW
-Dma.SDIO_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_TX.2.Instance=DMA2_Stream5
-Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.2.Mode=DMA_NORMAL
-Dma.SPI1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.2.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI2_TX.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SPI2_TX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SPI2_TX.0.Instance=DMA1_Stream4
-Dma.SPI2_TX.0.MemBurst=DMA_MBURST_SINGLE
-Dma.SPI2_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI2_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_TX.0.Mode=DMA_CIRCULAR
-Dma.SPI2_TX.0.PeriphBurst=DMA_PBURST_SINGLE
-Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_TX.0.Priority=DMA_PRIORITY_HIGH
-Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.SPI3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI3_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SPI3_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SPI3_TX.1.Instance=DMA1_Stream5
-Dma.SPI3_TX.1.MemBurst=DMA_MBURST_SINGLE
-Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_TX.1.Mode=DMA_CIRCULAR
-Dma.SPI3_TX.1.PeriphBurst=DMA_PBURST_SINGLE
-Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_TX.1.Priority=DMA_PRIORITY_HIGH
-Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO_RX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_RX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_RX.1.Instance=DMA2_Stream3
+Dma.SDIO_RX.1.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_RX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_RX.1.Mode=DMA_PFCTRL
+Dma.SDIO_RX.1.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDIO_TX.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_TX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_TX.2.Instance=DMA2_Stream6
+Dma.SDIO_TX.2.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_TX.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_TX.2.Mode=DMA_PFCTRL
+Dma.SDIO_TX.2.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.0.Instance=DMA2_Stream5
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.0.Mode=DMA_NORMAL
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.4.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SPI2_TX.4.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI2_TX.4.Instance=DMA1_Stream4
+Dma.SPI2_TX.4.MemBurst=DMA_MBURST_SINGLE
+Dma.SPI2_TX.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.4.Mode=DMA_CIRCULAR
+Dma.SPI2_TX.4.PeriphBurst=DMA_PBURST_SINGLE
+Dma.SPI2_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.4.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SPI3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SPI3_TX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI3_TX.3.Instance=DMA1_Stream7
+Dma.SPI3_TX.3.MemBurst=DMA_MBURST_SINGLE
+Dma.SPI3_TX.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI3_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.3.Mode=DMA_CIRCULAR
+Dma.SPI3_TX.3.PeriphBurst=DMA_PBURST_SINGLE
+Dma.SPI3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI3_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.3.Priority=DMA_PRIORITY_HIGH
+Dma.SPI3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 FATFS.BSP.number=1
-FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_MAX_SS
-FATFS.USE_DMA_CODE_SD=0
+FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_MAX_SS,_MIN_SS
+FATFS.USE_DMA_CODE_SD=1
 FATFS._MAX_SS=4096
+FATFS._MIN_SS=512
 FATFS._USE_LFN=2
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
@@ -87,22 +88,24 @@ FATFS0.BSP.solution=PC7
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2S2.AudioFreq=AudioFreqCustomValue
-I2S2.AudioFreqCustom=44100
-I2S2.DataFormat=I2S_DATAFORMAT_32B
-I2S2.ErrorAudioFreq=1.45 %
+I2S2.AudioFreqCustom=88200
+I2S2.DataFormat=I2S_DATAFORMAT_16B
+I2S2.ErrorAudioFreq=-0.12 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,AudioFreqCustom
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,AudioFreq,AudioFreqCustom,DataFormat,Standard
 I2S2.Instance=SPI$Index
-I2S2.RealAudioFreq=44.642 KHz
+I2S2.RealAudioFreq=87.89 KHz
+I2S2.Standard=I2S_STANDARD_MSB
 I2S2.VirtualMode=I2S_MODE_MASTER
 I2S3.AudioFreq=AudioFreqCustomValue
-I2S3.AudioFreqCustom=44100
-I2S3.DataFormat=I2S_DATAFORMAT_32B
-I2S3.ErrorAudioFreq=1.45 %
+I2S3.AudioFreqCustom=88200
+I2S3.DataFormat=I2S_DATAFORMAT_16B
+I2S3.ErrorAudioFreq=-0.12 %
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,AudioFreqCustom
+I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,AudioFreqCustom,Standard
 I2S3.Instance=SPI$Index
-I2S3.RealAudioFreq=44.642 KHz
+I2S3.RealAudioFreq=87.89 KHz
+I2S3.Standard=I2S_STANDARD_MSB
 I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -128,37 +131,41 @@ Mcu.Pin13=PA6
 Mcu.Pin14=PA7
 Mcu.Pin15=PB10
 Mcu.Pin16=PB12
-Mcu.Pin17=PC7
-Mcu.Pin18=PC8
-Mcu.Pin19=PC9
+Mcu.Pin17=PD9
+Mcu.Pin18=PD10
+Mcu.Pin19=PD11
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PC10
-Mcu.Pin23=PC11
-Mcu.Pin24=PC12
-Mcu.Pin25=PD2
-Mcu.Pin26=PB3
-Mcu.Pin27=PB5
-Mcu.Pin28=VP_FATFS_VS_SDIO
-Mcu.Pin29=VP_RTC_VS_RTC_Activate
+Mcu.Pin20=PD12
+Mcu.Pin21=PC7
+Mcu.Pin22=PC8
+Mcu.Pin23=PC9
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PC10
+Mcu.Pin27=PC11
+Mcu.Pin28=PC12
+Mcu.Pin29=PD2
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin30=PB3
+Mcu.Pin31=PB5
+Mcu.Pin32=VP_FATFS_VS_SDIO
+Mcu.Pin33=VP_RTC_VS_RTC_Activate
+Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=31
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
-MxCube.Version=5.5.0
-MxDb.Version=DB.5.0.50
+MxCube.Version=5.6.0
+MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -170,68 +177,91 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SPI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA1.GPIO_Label=BTN_DOWN
-PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PA1.GPIO_Mode=GPIO_MODE_INPUT
+PA1.GPIO_PuPd=GPIO_NOPULL
 PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA2.GPIO_Label=BTN_OK
-PA2.GPIO_PuPd=GPIO_PULLUP
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PA2.GPIO_Mode=GPIO_MODE_INPUT
+PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.Locked=true
 PA2.Signal=GPIO_Input
-PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA3.GPIO_Label=BTN_UP
-PA3.GPIO_PuPd=GPIO_PULLUP
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PA3.GPIO_Mode=GPIO_MODE_INPUT
+PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.Locked=true
 PA3.Signal=GPIO_Input
-PA4.GPIOParameters=GPIO_Speed
+PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA4.GPIO_Mode=GPIO_MODE_AF_PP
+PA4.GPIO_PuPd=GPIO_NOPULL
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Mode=Half_Duplex_Master
 PA4.Signal=I2S3_WS
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=TFT_SCK
+PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA5.GPIO_Mode=GPIO_MODE_AF_PP
+PA5.GPIO_PuPd=GPIO_NOPULL
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Mode=Simplex_Bidirectional_Master
 PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=PinState,GPIO_Label
-PA6.GPIO_Label=LED_D2
+PA6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA6.GPIO_PuPd=GPIO_NOPULL
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Locked=true
 PA6.PinState=GPIO_PIN_RESET
 PA6.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=TFT_SDA
+PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA7.GPIO_Mode=GPIO_MODE_AF_PP
+PA7.GPIO_PuPd=GPIO_NOPULL
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Mode=Simplex_Bidirectional_Master
 PA7.Signal=SPI1_MOSI
-PB10.GPIOParameters=GPIO_Speed
+PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB10.GPIO_Mode=GPIO_MODE_AF_PP
+PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB10.Mode=Half_Duplex_Master
 PB10.Signal=I2S2_CK
-PB12.GPIOParameters=GPIO_Speed
+PB12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB12.GPIO_Mode=GPIO_MODE_AF_PP
+PB12.GPIO_PuPd=GPIO_NOPULL
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB12.Mode=Half_Duplex_Master
 PB12.Signal=I2S2_WS
-PB3.GPIOParameters=GPIO_Speed
+PB3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB3.GPIO_Mode=GPIO_MODE_AF_PP
+PB3.GPIO_PuPd=GPIO_NOPULL
 PB3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3.Mode=Half_Duplex_Master
 PB3.Signal=I2S3_CK
-PB5.GPIOParameters=GPIO_Speed
+PB5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB5.GPIO_Mode=GPIO_MODE_AF_PP
+PB5.GPIO_PuPd=GPIO_NOPULL
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Mode=Half_Duplex_Master
 PB5.Signal=I2S3_SD
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=TFT_A0
+PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC0.GPIO_PuPd=GPIO_NOPULL
+PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC0.Locked=true
+PC0.PinState=GPIO_PIN_RESET
 PC0.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=TFT_RESET
+PC1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC1.GPIO_PuPd=GPIO_NOPULL
+PC1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC1.Locked=true
+PC1.PinState=GPIO_PIN_RESET
 PC1.Signal=GPIO_Output
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
@@ -243,32 +273,61 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=TFT_CS
+PC2.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC2.GPIO_PuPd=GPIO_NOPULL
+PC2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC2.Locked=true
+PC2.PinState=GPIO_PIN_RESET
 PC2.Signal=GPIO_Output
-PC3.GPIOParameters=GPIO_Speed
+PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC3.GPIO_Mode=GPIO_MODE_AF_PP
+PC3.GPIO_PuPd=GPIO_NOPULL
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC3.Mode=Half_Duplex_Master
 PC3.Signal=I2S2_SD
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=SDIO_CD
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PC7.GPIO_Mode=GPIO_MODE_INPUT
+PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.Locked=true
 PC7.Signal=GPIO_Input
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDIO_D1
-PCC.Checker=false
-PCC.Line=STM32F407/417
-PCC.MCU=STM32F407V(E-G)Tx
-PCC.PartNumber=STM32F407VETx
-PCC.Seq0=0
-PCC.Series=STM32F4
-PCC.Temperature=25
-PCC.Vdd=3.3
+PD10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PD10.GPIO_Label=DEBUG_1
+PD10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD10.GPIO_PuPd=GPIO_NOPULL
+PD10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD10.Locked=true
+PD10.PinState=GPIO_PIN_RESET
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PD11.GPIO_Label=DEBUG_2
+PD11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD11.GPIO_PuPd=GPIO_NOPULL
+PD11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD11.PinState=GPIO_PIN_RESET
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PD12.GPIO_Label=DEBUG_3
+PD12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD12.GPIO_PuPd=GPIO_NOPULL
+PD12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD12.Locked=true
+PD12.PinState=GPIO_PIN_RESET
+PD12.Signal=GPIO_Output
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
+PD9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PD9.GPIO_Label=DEBUG_0
+PD9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PD9.GPIO_PuPd=GPIO_NOPULL
+PD9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PD9.Locked=true
+PD9.PinState=GPIO_PIN_RESET
+PD9.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -283,7 +342,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407VETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x4000
@@ -316,13 +375,12 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=45714285.71428572
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SN,PLLI2SR,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=180000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SN,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
-RCC.PLLI2SN=160
-RCC.PLLI2SR=7
+RCC.PLLI2SN=180
 RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQ=7
@@ -334,12 +392,13 @@ RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=320000000
+RCC.VCOI2SOutputFreq_Value=360000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
-RCC.VcooutputI2S=45714285.71428572
+RCC.VcooutputI2S=180000000
 SDIO.ClockDiv=4
-SDIO.IPParameters=ClockDiv
+SDIO.HardwareFlowControl=SDIO_HARDWARE_FLOW_CONTROL_ENABLE
+SDIO.IPParameters=ClockDiv,HardwareFlowControl
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
