UPD: Stream design tweaks.

--- a/openDSD.ioc
+++ b/openDSD.ioc
@@ -42,31 +42,25 @@ Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI2_TX.4.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SPI2_TX.4.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI2_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_TX.4.Instance=DMA1_Stream4
-Dma.SPI2_TX.4.MemBurst=DMA_MBURST_SINGLE
 Dma.SPI2_TX.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.SPI2_TX.4.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_TX.4.Mode=DMA_CIRCULAR
-Dma.SPI2_TX.4.PeriphBurst=DMA_PBURST_SINGLE
 Dma.SPI2_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI2_TX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_TX.4.Priority=DMA_PRIORITY_HIGH
-Dma.SPI2_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SPI2_TX.4.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI2_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI3_TX.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SPI3_TX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI3_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI3_TX.3.Instance=DMA1_Stream7
-Dma.SPI3_TX.3.MemBurst=DMA_MBURST_SINGLE
 Dma.SPI3_TX.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.SPI3_TX.3.MemInc=DMA_MINC_ENABLE
 Dma.SPI3_TX.3.Mode=DMA_CIRCULAR
-Dma.SPI3_TX.3.PeriphBurst=DMA_PBURST_SINGLE
 Dma.SPI3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI3_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_TX.3.Priority=DMA_PRIORITY_HIGH
-Dma.SPI3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SPI3_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.BSP.number=1
 FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_MAX_SS,_MIN_SS
 FATFS.USE_DMA_CODE_SD=1
