--- a/openDSD.ioc
+++ b/openDSD.ioc
@@ -59,13 +59,14 @@ Dma.SPI3_TX.3.MemInc=DMA_MINC_ENABLE
 Dma.SPI3_TX.3.Mode=DMA_CIRCULAR
 Dma.SPI3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI3_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI3_TX.3.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.BSP.number=1
-FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_MAX_SS,_MIN_SS
+FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_MAX_SS,_MIN_SS,_USE_FIND
 FATFS.USE_DMA_CODE_SD=1
 FATFS._MAX_SS=4096
 FATFS._MIN_SS=512
+FATFS._USE_FIND=1
 FATFS._USE_LFN=2
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
